# simple-hash-server

./: CMakeLists.txt  README.md  build_server.sh
src/: CMakeLists.txt  HashServer.cpp  HashServer.h  Hasher.h  ShaHasher.cpp  ShaHasher.h  Socket.cpp  Socket.h  SocketReader.cpp  SocketReader.h  main.cpp
tst/: CMakeLists.txt  TestShaHasher.cpp  main_test.cpp
